--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
+/* button syle  */
 button {
-    text-align: center;
-    background-color: rgb(54, 167, 243);
+    background-color: rgb(17, 91, 230);
     padding: 5px 25px 5px 50px;
 }
+/* all input style css  */
 .all-input{
     font-weight: bold;
 }
